--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <script src="script.js"></script>
+  </body>
 </html>
