--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Password Generator</h1>
+      </header>
+      <div class="card"></div>
+      <br />
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
