remove comment that was showing up in text area

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             placeholder="Your Secure Password"
             aria-label="Generate Password"
           >
-                  <!-- area where things will append to from script.js -->
-              </textarea
-          >
+          </textarea>
         </div>
         <br />
         <div class="card-bottom">
